[package]
name = "shamir-zero"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Allen Sarkisyan <allensarkisyan@gmail.com>"]
repository = "https://github.com/allensarkisyan/shamir_zero"
readme = "README.md"
keywords = ["cryptography", "shamir", "secret-sharing", "sss", "threshold"]
categories = ["cryptography", "security", "mathematics", "algorithms"]
description = """
A Rust implementation of IBM / HashiCorp Vault's Shamir Secret Sharing (originally in Go under MPL-2.0)
"""

[features]
default = []

[dependencies]
rand = { version = "0.10", features = ["sys_rng"] }

[dev-dependencies]
env_logger = "0.11.10"
log = "0.4.29"
