[package]
name = "shamir-zero"
version = "0.1.8"
edition = "2024"
license = "MIT"
authors = ["Allen Sarkisyan <allensarkisyan@gmail.com>"]
repository = "https://github.com/allensarkisyan/shamir_zero"
readme = "README.md"
keywords = ["cryptography", "shamir", "secret-sharing", "sss", "threshold"]
categories = ["cryptography", "security", "mathematics", "algorithms"]
description = """
A Rust implementation of IBM / HashiCorp Vault's Shamir Secret Sharing (originally in Go under MPL-2.0)
"""

[features]
default = ["fast-inverse"]
fast-inverse = []

[dependencies]
rand = { version = "0.10", features = ["sys_rng"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
env_logger = "0.11.10"
log = "0.4.30"


[[bench]]
name = "shamir_zero_benchmark"
harness = false

[[bench]]
name = "shamir_split_benchmark"
harness = false

[[bench]]
name = "shamir_combine_benchmark"
harness = false

[[bench]]
name = "shamir_zero_comprehensive_benchmark"
harness = false
